--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,11 +10,14 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-header-dark: #BEBECA;
+  --color-side-cont-dark: #4E4F5C;
+  --color-side-cont: #CCCCCC;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #30303B;
     --foreground: #ededed;
   }
 }
