--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,4 +26,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Montserrat, Helvetica, sans-serif;
+  height: 100%;
 }
